--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,16 @@
 credentials:
   usernames:
-    jsmith:
+    admin:
       email: sanou.ezekiel226@gmail.com
       name: Sanou Ezekiel
       password: $2b$12$Rtb1tnugIpfmtBD.DTy9uOvt3ILrDDIcFVzqT8WmC9GGtl753QUM6 # To be replaced with hashed password
-    rbriggs:
-      email: hsanououedraogo@gmail.com
-      name: Sanou Ouedraogo
-      password: $2b$12$ngb1NXnRYB0NhzvmuG.Sbux7OBND0NepS6VyJYykSiYioe7f5T6/u # To be replaced with hashed password
+    Z_Benjamin:
+      name: ZOUNGRANA Benjamin
+      password: $2b$12$Rtb1tnugIpfmtBD.DTy9uOvt3ILrDDIcFVzqT8WmC9GGtl753QUM6 # To be replaced with hashed password
+    
+   
+      
+
 cookie:
   expiry_days: 30
   key: AAFTSS # Must be string
